Fix divider spacing issue

--- a/src/css/analysisPanel.styl
+++ b/src/css/analysisPanel.styl
@@ -392,9 +392,11 @@
     text-transform uppercase
 
 
-.analysis-coordinates__select-container,
-.analysis-coordinates__inputs-container
+.analysis-coordinates__select-container
   margin 1rem 0
+  
+.analysis-coordinates__inputs-container-dms
+  padding 0.75rem 0
   
 .analysis-coordinates__select
   -webkit-appearance none
@@ -453,11 +455,16 @@
 .analysis-coordinates__longitude-label
   font-size 0.75rem
   
-.analysis-coordinates__divider
+.analysis-coordinates__divider-dd
   width 100%
   height 1px
   background-color #ccc
   margin 1rem 0
+
+.analysis-coordinates__divider-dms
+  width 100%
+  height 1px
+  background-color #ccc
   
 .analysis-coordinates__latitude-container  
 .analysis-coordinates__longitude-container
